--- a/index.html
+++ b/index.html
@@ -1,15 +1,3 @@
-<?php
-
-session_start();
-?>
-<div id="response"></div>
-<script type="text/javascript">
-	setInterval(function()
-	{
-		 	var xmlhttp=new XMLHttpRequest();
-		 	xmlhttp.open("GET","response.php",false);
-		 	xmlhttp.send(null);
-		 	document.getElementById("response").innerHTML=xmlhttp.responseText;
-
-	},1000);
-</script>
+<html>
+<h1>Yeah here i'm gonna host my website</h1>
+</html>
